# roost

./: LICENSE  PLAN.md  README.md  pyproject.toml  roost.py
.github/workflows/: test.yml
tests/: integration_test.py  smoke_test.py  stress_test.py  test_detect_state.py
