[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roost"
version = "0.1.0"
description = "Tmux-based AI agent lifecycle manager. Spawn, monitor, and manage coding agents."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["tmux", "agents", "ai", "lifecycle", "claude", "copilot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "libtmux>=0.37.0",
]

[project.scripts]
roost = "roost:main"

[project.urls]
Homepage = "https://github.com/otherland/roost"
Repository = "https://github.com/otherland/roost"
Issues = "https://github.com/otherland/roost/issues"
